@@ -83,6 +83,9 @@ end
 desc 'Release the website and new gem version'
 task :deploy => [:check_version, :website, :release]
 
+desc 'Runs tasks website_generate and install_gem as a local deployment of the gem'
+task :local_deploy => [:website_generate, :install_gem]
+
 task :check_version do
   unless ENV['VERSION']
     puts 'Must pass a VERSION=x.y.z release version'
