@@ -33,7 +33,7 @@
     <h1>New Gem Generator</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/newgem"; return false'>
       Get Version
-      <a href="http://rubyforge.org/projects/newgem" class="numbers">0.9.3</a>
+      <a href="http://rubyforge.org/projects/newgem" class="numbers">0.9.4</a>
     </div>
     <h1>&#x2192; &#8216;newgem&#8217;</h1>
 
@@ -134,13 +134,15 @@ NOW - update wizzo/Rakefile with gem description, etc
 	<p>If you don&#8217;t want a website, remove the <code>website</code> related files from the Manifest.txt.</p>
 
 
-	<p>Make sure you&#8217;ve generated the <code>website/index.html</code> file before continuing to package and release your gem (unless you remove it from the Manifest.txt).</p>
-
-
 	<h2>Package and test locally</h2>
 
 
 	<p>Before releasing a new version of a gem, it is a great idea to install the gem locally and do some sanity checks. You know, to limit the chance of you looking like a noob.</p>
+
+
+<pre>rake local_deploy</pre>
+
+	<p>This generates the website into your website folder, and locally installs the gem, ready for testing and local use.</p>
 
 
 	<h3>Change the gems version number</h3>
