@@ -33,7 +33,7 @@
     <h1>New Gem Generator</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/newgem"; return false'>
       Get Version
-      <a href="http://rubyforge.org/projects/newgem" class="numbers">0.9.3</a>
+      <a href="http://rubyforge.org/projects/newgem" class="numbers">0.9.4</a>
     </div>
     <h1>&#x2192; using &#8216;rubyforge&#8217;</h1>
 
