@@ -1,3 +1,3 @@
 // Announcement JS file
-var version = "0.9.3";
+var version = "0.9.4";
 MagicAnnouncement.show('compositekeys', version);
